# advent_of_code_2022

./: pyproject.toml
code/: calories.py  cleanup.py  file_storage.py  rock_paper_scissors.py  rucksack.py  supplystacks.py  treehouse.py  tuning.py
tests/: test_day_01.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_one.py  test_day_two.py
