[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["nedwebster <edwardpwebster@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
